[workspace]
members  = ["packages/*", "contracts/*", "test-suite/", "e2e"]
resolver = "2"

[workspace.package]
version    = "0.25.0"
edition    = "2021"
homepage   = "https://stargaze.zone"
repository = "https://github.com/public-awesome/launchpad"
license    = "Apache-2.0"

[workspace.dependencies]
base-factory        = { version = "0.25.0", path = "contracts/base-factory" }
base-minter         = { version = "0.25.0", path = "contracts/base-minter" }
cosmwasm-schema     = "1.2.1"
cosmwasm-std        = "1.2.1"
cw-controllers      = "1.0.1"
cw2                 = "1.0.1"
cw4                 = "1.0.1"
cw4-group           = "1.0.1"
cw721               = "0.17.0"
cw721-base          = "0.17.0"
cw-multi-test       = "0.16.2"
cw-storage-plus     = "1.0.1"
cw-utils            = "1.0.1"
schemars            = "0.8.11"
serde               = { version = "1.0.145", default-features = false, features = ["derive"] }
sg1                 = { version = "0.25.0", path = "packages/sg1" }
sg2                 = { version = "0.25.0", path = "packages/sg2" }
sg4                 = { version = "0.25.0", path = "packages/sg4" }
sg721               = { version = "0.25.0", path = "packages/sg721" }
sg721-base          = { version = "0.25.0", path = "contracts/sg721-base" }
sg721-nt            = { version = "0.25.0", path = "contracts/sg721-nt" }
sg-controllers      = { version = "0.25.0", path = "packages/controllers" }
sg-metadata         = { version = "0.25.0", path = "packages/sg-metadata" }
sg-multi-test       = { version = "0.25.0", path = "packages/sg-multi-test" }
sg-splits           = { version = "0.25.0", path = "contracts/splits" }
sg-std              = { version = "0.25.0" }
sg-whitelist        = { version = "0.25.0", path = "contracts/whitelist" }
thiserror           = "1.0.31"
url                 = "2.2.2"
sha2                = { version = "0.10.2", default-features = false }
vending-factory     = { version = "0.25.0", path = "contracts/vending-factory" }
vending-minter      = { version = "0.25.0", path = "contracts/vending-minter" }
whitelist-immutable = { version = "0.25.0", path = "contracts/whitelist-immutable" }
ethereum-verify     = { version = "0.25.0", path = "packages/ethereum-verify" }
sg-eth-airdrop      = { version = "0.25.0", path = "contracts/sg-eth-airdrop" }
test-suite          = { version = "0.25.0", path = "test-suite" }
semver              = "1"

[profile.release.package.sg721]
codegen-units = 1
incremental   = false

[profile.release.package.sg1]
codegen-units = 1
incremental   = false

[profile.release.package.sg2]
codegen-units = 1
incremental   = false

[profile.release.package.sg4]
codegen-units = 1
incremental   = false

[profile.release.package.sg721-base]
codegen-units = 1
incremental   = false

[profile.release.package.sg721-nt]
codegen-units = 1
incremental   = false

[profile.release.package.sg721-updatable]
codegen-units = 1
incremental = false

[profile.release.package.sg-whitelist]
codegen-units = 1
incremental   = false

[profile.release.package.sg-utils]
codegen-units = 1
incremental   = false

[profile.release.package.sg-std]
codegen-units = 1
incremental   = false

[profile.release.package.base-factory]
codegen-units = 1
incremental   = false

[profile.release.package.base-minter]
codegen-units = 1
incremental   = false

[profile.release.package.sg-eth-airdrop]
codegen-units = 1
incremental   = false

[profile.release.package.vending-factory]
codegen-units = 1
incremental   = false

[profile.release.package.vending-minter]
codegen-units = 1
incremental   = false

[profile.release.package.sg-splits]
codegen-units = 1
incremental   = false

[profile.release.package.whitelist-immutable]
codegen-units = 1
incremental   = false

[profile.release.package.ethereum-verify]
codegen-units = 1
incremental   = false

[profile.release.package.test-suite]
codegen-units = 1
incremental   = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
