[package]
name       = "e2e"
version    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc       = { version = "3.0.1" }
cosm-tome      = { version = "0.1.1" }
assert_matches = "1.5"
serde_json     = "1.0"
env_logger     = "0.9.0"
test-context   = "0.1.4"
once_cell      = "1.13.0"
serde          = { version = "1.0", default-features = false, features = ["derive"] }
rand           = "0.8"

cosmwasm-std         = { workspace = true }
sg2                  = { workspace = true }
sg721                = { workspace = true }
sg721-base           = { workspace = true }
sg-metadata          = { workspace = true }
vending-factory      = { workspace = true }
vending-minter       = { workspace = true }
open-edition-factory = { workspace = true }
open-edition-minter  = { workspace = true }
