[package]
name = "base-factory"
version = "0.2.0"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2018"
description = "A 1/1 Stargaze minter factory"
license = "Apache-2.0"
repository = "https://github.com/public-awesome/launchpad"
homepage = "https://stargaze.zone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1.4", features = ["staking"] }
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw-utils = "0.15.0"
sg1 = { path = "../../packages/sg1" }
sg-std = { path = "../../packages/sg-std" }
sg2 = { path = "../../packages/sg2" }

[dev-dependencies]
cosmwasm-schema = "1.1.4"
cw-multi-test = "0.15.0"
sg-multi-test = { path = "../../packages/sg-multi-test" }
