[package]
name = "base-minter"
version = "0.14.0"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2018"
description = "Stargaze NFT basic 1/1 minter contract"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw-utils = "0.13.4"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
url = "2.2.0"
sg-std = "0.14.0"
cw721 = "0.13.4"
cw721-base = { version = "0.13.4", features = ["library"] }
sg1 = "0.14.1"
sg721 = "0.14.0"
base-factory = { path = "../base-factory", features = ["library"] }
sg2 = "0.1.0"
sg4 = "0.11.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13.4"
sg-multi-test = "0.15.1"
sg721-nt = { version = "0.13.1", features = ["library"] }
