[package]
name = "base-minter"
version = "0.14.1"
authors = ["Shane Vitarana <s@noreply.publicawesome.com>"]
edition = "2018"
description = "Stargaze NFT basic 1/1 minter contract"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-std = { version = "1.1.4" }
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
cw-utils = "0.15.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
url = "2.2.0"
sg-std = { path = "../../packages/sg-std" }
cw721 = "0.15.0"
cw721-base = { version = "0.15.0", features = ["library"] }
sg721-base = { path = "../sg721-base" }
base-factory = { path = "../base-factory" }
sg1 = { path = "../../packages/sg1" }
sg721 = { path = "../../packages/sg721" }

sg2 = { path = "../../packages/sg2" }
sg4 = { path = "../../packages/sg4" }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.4" }
cw-multi-test = "0.15.0"
sg-multi-test = { path = "../../packages/sg-multi-test" }
sg721-nt = { path = "../sg721-nt" }
