[package]
name = "claim"
version = "0.15.1"
authors = ["jhernandezb <jorge@publicawesome.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw2 = "0.13.4"
cw-utils = "0.13.4"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
vending-minter = { path = "../vending-minter", features = ["library"] }
sg-std = { path = "../../packages/sg-std" }
thiserror = { version = "1.0" }
cw-storage-plus = "0.13.4"
sg-marketplace = { git = "https://github.com/public-awesome/marketplace", branch = "feature/fair-burn", features = [
  "library",
] }
cw-controllers = "0.13.4"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13.4"
anyhow = "1"
sg721-base = { path = "../sg721-base", features = ["library"] }
cw721 = "0.13.2"
cw721-base = { version = "0.13.2", features = ["library"] }
sg-multi-test = { path = "../../packages/sg-multi-test" }
sg-controllers = { path = "../../packages/controllers" }
