[package]
name = "sg-marketplace"
version = "0.1.0"
authors = [
  "Shane Vitarana <s@publicawesome.com>",
  "Jake Hartnell <jake@publicawesome.com>",
]
edition = "2018"
repository = "https://github.com/public-awesome/contracts"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "0.11"
cw2 = "0.11"
cw20 = "0.11"
cw721 = "0.11"
cw721-base = "0.11"
schemars = "0.8.8"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
sg721 = { git = "https://github.com/public-awesome/stargaze-contracts" }
thiserror = { version = "1.0.30" }
sg-std = { git = "https://github.com/public-awesome/stargaze-contracts" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = { version = "0.11" }
cw721-metadata-onchain = "0.11"
