[package]
name = "minter"
version = "0.10.0"
authors = ["Jake Hartnell <jake@stargaze.zone>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""

[dependencies]
getrandom = {version = "0.2.4", features = ["js"]}
cosmwasm-std = { version = "1.0.0-beta7" }
cosmwasm-storage = { version = "1.0.0-beta7" }
cw-storage-plus = "0.13.1"
cw2 = "0.13.1"
cw-utils = "0.13.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sg721 = { path = "../sg721", features = ["library"] }
thiserror = { version = "1.0" }
url = "2.2.0"
sg-std = "0.10.0"
whitelist = { path = "../whitelist", features = ["library"] }
cw721 = "0.13.1"
cw721-base = { version = "0.13.1", features = ["library"] }
rand_core = { version = "0.6", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
shuffle = { git = "https://github.com/webmaster128/shuffle", branch = "rm-getrandom" }
sha2 = "0.10.2"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta7" }
cw-multi-test = "0.13.1"
sg-multi-test = { path = "../../packages/sg-multi-test" }
