[package]
name = "minter"
version = "0.13.0"
authors = ["Jake Hartnell <jake@stargaze.zone>"]
edition = "2018"
description = "Stargaze NFT minter contract"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cw-utils = "0.13.2"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
url = "2.2.0"
sg-std = { path = "../../packages/sg-std" }
sg-whitelist = { path = "../whitelist", features = ["library"] }
rand_core = { version = "0.6", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
shuffle = { git = "https://github.com/webmaster128/shuffle", branch = "rm-getrandom" }
sha2 = "0.10.2"
cw721 = "0.13.2"
cw721-base = { version = "0.13.2", features = ["library"] }
sg1 = { path = "../../packages/sg1" }
sg721 = { path = "../../packages/sg721" }
vending = { path = "../../packages/vending" }
factory = { path = "../factory", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13.2"
sg-multi-test = { path = "../../packages/sg-multi-test" }
sg721-vending = { path = "../sg721-vending", features = ["library"] }
